--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,11 +18,11 @@ build_script:
 artifacts:
 - path: '.\artifacts\*.nupkg'
 deploy:
-- provider: NuGet
-  api_key:
-    secure: Uft/AgWL0ObDUb6hWLhsftRR1sNhLa5vONUcVa/2KjVAYZApxZD6ckJ+ABFQs3bB
-  skip_symbols: true
-  artifact: /.*\.nupkg/
-  on:
-      branch: master                # release from master branch only
-      appveyor_repo_tag: true       # deploy on tag push only
+#- provider: NuGet
+#  api_key:
+#    secure: Uft/AgWL0ObDUb6hWLhsftRR1sNhLa5vONUcVa/2KjVAYZApxZD6ckJ+ABFQs3bB
+#  skip_symbols: true
+#  artifact: /.*\.nupkg/
+#  on:
+#    branch: master                # release from master branch only
+#    appveyor_repo_tag: true       # deploy on tag push only
