--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ pull_requests:
 image: Visual Studio 2017
 build_script:
 - ps: .\build\build.ps1 $env:APPVEYOR_BUILD_VERSION $env:APPVEYOR_REPO_TAG_NAME
+test: off
 #before_test:
 #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 #test_script:
@@ -17,7 +18,15 @@ build_script:
 #    }
 artifacts:
 - path: '.\artifacts\*.nupkg'
+  name: NuGet
 deploy:
+- provider: NuGet
+  server: https://www.myget.org/F/awesome/api/v2/package
+  api_key:
+    secure: 3mon3jP952YiJi215yvv2yytsiUkisXGb+328Qw0Sl9Jpm1/+p6BGOJC5GTWmXXZ
+  skip_symbols: true
+  on:
+    branch: master
 #- provider: NuGet
 #  api_key:
 #    secure: Uft/AgWL0ObDUb6hWLhsftRR1sNhLa5vONUcVa/2KjVAYZApxZD6ckJ+ABFQs3bB
