--- a/src/JiraServiceDesk.Net/JiraServiceDesk.Net.csproj
+++ b/src/JiraServiceDesk.Net/JiraServiceDesk.Net.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flurl.Http" Version="2.3.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
 </Project>
