--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ branches:
   - master
 pull_requests:
   do_not_increment_build_number: true
-image: Visual Studio 2017
+#image: Visual Studio 2017
 build_script:
 - ps: .\build\build.ps1 $env:APPVEYOR_BUILD_VERSION $env:APPVEYOR_REPO_TAG_NAME
 test: off
