--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,10 +4,9 @@ branches:
   - master
 pull_requests:
   do_not_increment_build_number: true
-#image: Visual Studio 2017
+image: Visual Studio 2017
 build_script:
 - ps: .\build\build.ps1 $env:APPVEYOR_BUILD_VERSION $env:APPVEYOR_REPO_TAG_NAME
-test: off
 #before_test:
 #- ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 #test_script:
@@ -18,7 +17,6 @@ test: off
 #    }
 artifacts:
 - path: '.\artifacts\*.nupkg'
-  name: NuGet
 deploy:
 - provider: NuGet
   server: https://www.myget.org/F/awesome/api/v2/package
