--- a/src/JiraServiceDesk.Net/JiraServiceDesk.Net.csproj
+++ b/src/JiraServiceDesk.Net/JiraServiceDesk.Net.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
-    <PackageVersion>2.0.0</PackageVersion>
+    <Version>2.0.0</Version>
     <Authors>Luk Vermeulen</Authors>
     <Company>Luk Vermeulen</Company>
     <Copyright>Copyright © 2018. All rights reserved.</Copyright>
